# api_gateway

./: .env  Cargo.toml  README.md
migrations/2024-01-08-125329_create_posts/: up.sql
migrations/2024-01-08-125329_create_users/: up.sql
migrations/2024-01-11-075530_create_api_keys/: down.sql  up.sql
migrations/2024-02-09-121856_create_logs/: up.sql
src/: app.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  testing.rs
src/database/: api_keys.rs  users.rs
src/handler/: index.rs  mod.rs  sample_endpoints.rs  user_handler.rs  users.rs
src/middleware/: logger.rs  mod.rs
src/middleware/authorization_service/: authorization_service.rs  layer.rs  mod.rs
src/middleware/logger/: layer.rs  logger.rs  mod.rs
tests/: create_user_with_api_key.rs  store_user_with_api_key.rs  test_create_user_with_api_key.rs
tests/api/index/: index.rs
tests/api/users/: index_user.rs  mod.rs  store.rs  store_user.rs
tests/common/: mod.rs
