[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
deadpool-diesel = { version = "0.5.0", features = ["mysql"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
diesel_migrations = "2.1.0"
serde_json="1.0.111"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1.35", features = ["full"] }
http-body-util = "0.1.0"
mime = "0.3"
tower-http = { version = "0.5.0", features = ["trace"] }
rand = "0.8.5"
tower = { version = "0.4", features = ["util"] }
futures-util = "0.3.30"
chrono = { version = "0.4.33", features = ["serde"] }
